# tree-sitter-bibtex

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bibtex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bibtex/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBibtex/: bibtex.h
bindings/swift/TreeSitterBibtexTests/: TreeSitterBibtexTests.swift
rules/: content.js  entry.js  index.js
src/: binding.cc  grammar.json  node-types.json  parser.c
test/corpus/: comment.txt  entry.txt  preamble.txt  string.txt
util/: index.js
