[package]
name = "tree-sitter-bibtex"
description = "bibtex grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "bibtex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/latex-lsp/tree-sitter-bibtex"
edition = "2018"
license = "MIT"
authors = ["Patrick Förster <patrick.foerster@outlook.de>"]
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "rules/*",
  "util/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
